fixed the icon spacing issue

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -169,8 +169,6 @@ a:hover .header-profile-image {
   margin-top: 5%;
   height: 45px;
   width: 165px;
-  /* height: 6.6vh;
-  width: 15.3vw; */
   border-radius: 5px;
   background: #32acdc;
   border: 0;
