--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,6 @@ p.small {
 .btn-blue {
   height: 52px;
   width: 371px;
-  /* height: 7.7vh;
-  width: 28vw; */
   border-radius: 5px;
   margin-right: 8px;
   border: 0;
@@ -93,8 +91,6 @@ p.small {
 .btn-blue:hover {
   height: 52px;
   width: 371px;
-  /* height: 7.7vh;
-  width: 28vw; */
   border-radius: 5px;
   margin-right: 8px;
   border: 0;
